2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>
	
	* BulletChrome.cs: Finished (hopefully) proper implementation of radio button rendering.

2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>
	
	* BulletChrome.cs: Stopped working on the proper implementation of check box rendering.

2007-07-16  George Giolfan  <georgegiolfan@yahoo.com>
	
	* ButtonChrome.cs: Finished (hopefully) proper implementation of rendering.

2007-07-16  George Giolfan  <georgegiolfan@yahoo.com>
	
	* BulletChrome.cs: Removed useless using statement.
	* ButtonChrome.cs: Removed useless using statement. Improved rendering.
	* ScrollChrome.cs: Removed useless using statement.
	
2007-07-14  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Finished (hopefully) proper implementation of rendering.

2007-07-13  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Started proper implementation of rendering.

2007-07-03  George Giolfan  <georgegiolfan@yahoo.com>

	* SystemDropShadowChrome.cs: Improved a call.

2007-07-03  George Giolfan  <georgegiolfan@yahoo.com>

	* SystemDropShadowChrome.cs: Finished previous work. (Does not support CornerRadius yet.)

2007-07-03  George Giolfan  <georgegiolfan@yahoo.com>

	* SystemDropShadowChrome.cs: Some work.

2007-07-03  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Finally noticed that the glyph matters.

2007-07-03  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Some fixes.

2007-07-03  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Added some checks.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* SystemDropShadowChrome.cs: Added.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrolGllyph.cs, ThemeColor.cs: Added.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* PlatformCulture.cs: Added.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarBrushConverter.cs: Some fixes.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>
